--- a/frontend/authentech.kv
+++ b/frontend/authentech.kv
@@ -104,7 +104,7 @@ MDScreen:
                     md_bg_color: rgba(36, 36, 36, 0.8)
 
                     MDLabel:
-                        text: "Performing Analysis..."
+                        text: ""
                         halign: "center"
                         size_hint_y: None
                         height: dp(30)
